Card Alignment Issue Fixed

--- a/src/Views/StaticSite/Components/EnrollmentForm/formstyles.scss
+++ b/src/Views/StaticSite/Components/EnrollmentForm/formstyles.scss
@@ -1447,7 +1447,7 @@ input[type='radio']:checked::before {
     .details_box {
       // border: 1px solid #60606080 !important;
       border-radius: 20px;
-      max-width: 780px;
+      // max-width: 780px;
       min-width: auto;
       height: auto;
       background-color: #fff;
